--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
-<html lang="en" style="width:100%; height:100%;">
-
+<html>
 <head>
+
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Himanshu Sharma | Resume</title>
+  <title>Resume | Himanshu Sharma</title>
 </head>
 
 <body style="width:100%; height:100%; margin:0;">
@@ -11,5 +11,4 @@
     src="https://docs.google.com/gview?url=https://github.com/himanshusharma89/resume/raw/master/Himanshu_Resume.pdf&embedded=true"
     style="width:100%; height:100%;" frameborder="0"></iframe>
 </body>
-
 </html>
